tests/NormalTests/paczka1/fuzzy1/57601850.err
Error in line 3: vL6c6He39t S391 62,3
Error in line 1: S863 S391 11,5
Error in line 10: KQmdGRg S391 53,9
Error in line 11: 3G8 S391 71,1
Error in line 19: 6xYCFcL S651 61,0
Error in line 31: y7HZF8QUt S391 89,9
